fixed typo in ki_prompts file

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,8 @@
   },
 
   "remoteUser": "vscode",
+  "runArgs": ["--env-file", "${localWorkspaceFolder}/.env"],
+
   "remoteEnv": {
     "DISPLAY": ""
   },
@@ -149,6 +151,7 @@
     }
   },
 
-  "postCreateCommand": ""
+  // Git-Konfiguration nach dem Container-Start setzen
+  "postCreateCommand": "bash -c 'if [ -n \"$GIT_USER_NAME\" ]; then git config --global user.name \"$GIT_USER_NAME\"; fi && if [ -n \"$GIT_USER_EMAIL\" ]; then git config --global user.email \"$GIT_USER_EMAIL\"; fi'",
 
 }
