--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,55 +1,54 @@
 {
-    "latex-workshop.latex.recipes": [
-        {
-            "name": "build",
-            "tools": [
-                "lualatex",
-                "biber",
-                "lualatex",
-                "lualatex"
-            ]
-        }
-    ],
-    "latex-workshop.latex.clean.fileTypes": [
-        "*.aux",
-        "*.bcf",
-        "*.ilg",
-        "*.bbl",
-        "*.blg",
-        "*.idx",
-        "*.ind",
-        "*.lof",
-        "*.lot",
-        "*.out",
-        "*.toc",
-        "*.acn",
-        "*.acr",
-        "*.alg",
-        "*.glg",
-        "*.glo",
-        "*.gls",
-        "*.ist",
-        "*.fls",
-        "*.log",
-        "*.nlo",
-        "*.nls*",
-        "*.run.xml",
-        "*.fdb_latexmk"
-    ],
-    "latex-workshop.latex.tools": [
-        {
-            "name": "lualatex",
-            "command": "lualatex",
-            "args": [
-                "%DOC%.tex"
-            ]
-        },
-        {
-            "name": "biber",
-            "command": "biber",
-            "args": [
-                "%DOCFILE%"
-            ]
-        }
-    ]
+  "latex-workshop.latex.recipes": [
+    {
+      "name": "latexmk (lualatex + biber)",
+      "tools": [
+        "latexmk-lualatex"
+      ]
+    }
+  ],
+  "latex-workshop.latex.tools": [
+    {
+      "name": "latexmk-lualatex",
+      "command": "latexmk",
+      "args": [
+        "-pdf",
+        "-interaction=nonstopmode",
+        "-synctex=1",
+        "-lualatex",
+        "%DOC%"
+      ]
+    }
+  ],
+  "latex-workshop.latex.recipe.default": "latexmk (lualatex + biber)",
+  "latex-workshop.latex.clean.fileTypes": [
+    "*.aux",
+    "*.bcf",
+    "*.ilg",
+    "*.bbl",
+    "*.blg",
+    "*.idx",
+    "*.ind",
+    "*.lof",
+    "*.lot",
+    "*.out",
+    "*.toc",
+    "*.acn",
+    "*.acr",
+    "*.alg",
+    "*.glg",
+    "*.glo",
+    "*.gls",
+    "*.ist",
+    "*.fls",
+    "*.log",
+    "*.nlo",
+    "*.nls*",
+    "*.run.xml",
+    "*.fdb_latexmk"
+  ],
+  "ltex.enabled": true,
+  "ltex.language": "de-DE",
+  "ltex.hiddenFalsePositivesFile": ".vscode/ltex.hiddenFalsePositives.de-DE.txt",
+  "ltex.dictionaryFolder": ".vscode"
 }
